Sun Feb 13 20:52:57 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	Up-issue to 0.83

Sun Feb 13 10:55:35 CET 2005 (tk)
---------------------------------
  * freshclam: add support for Foreground (requested by Jeremy Kitchen
	       <kitchen*scriptkitchen.com>)

Sun Feb 13 09:32:51 GMT 2005 (njh)
----------------------------------
  * libclamav/message.c:	Some files wouldn't uudecode correctly (reported
			by Jerome Limozin <jerome at limozin.net>)

Fri Feb 11 22:21:44 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	Added --whistlist-file and --sendmail-cf options
			When in SESSION mode, not all sessions would send END

Tue Feb  8 14:45:05 GMT 2005 (trog)
-----------------------------------
  * libclamav/special.c: Only check specific RIFF files. Lots of broken software out there
		producing bad files.

Tue Feb  8 09:03:19 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	Don't use clamd's SESSION command

Mon Feb  7 22:13:47 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	--detect-forged-email-address
			--external: NUL terminate the string read from clamd

Sun Feb  6 22:22:10 CET 2005 (tk)
---------------------------------
  * contrib/clamdwatch: v0.7.1 (http://mikecathey.com/code/clamdwatch/)

Sun Feb  6 22:05:24 CET 2005 (tk)
---------------------------------
  * docs: update (html docs are back)

Sun Feb  6 20:44:03 CET 2005 (tk)
---------------------------------
  * clamd/others.c, clamdscan/client.c: AIX fix (patch by Mike Loewen
					<mcl8*psu.edu>)

Sun Feb  6 20:17:34 CET 2005 (tk)
---------------------------------
  * clamd/server-th.c: not all thrmgr_new calls were respecting idletimeout
		       value (patch by Mark Pizzolato
		       <clamav-devel*subscriptions.pizzolato.net>

Sun Feb  6 18:23:15 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Some W95.Matrix.SCR were not being caught. Reported by